--- a/test/fixtures/tutors.yml
+++ b/test/fixtures/tutors.yml
@@ -1,4 +1,4 @@
 adarsh:
-  name: Adarsh Example
+  name: Adarsh Chilly
   email: developer@example.com
-  password_digest: <%= Tutor.digest('password') %>
+  password_digest: <%= Person.digest('password') %>
