--- a/test/fixtures/tutors.yml
+++ b/test/fixtures/tutors.yml
@@ -2,3 +2,8 @@ adarsh:
   name: Adarsh Chilly
   email: developer@example.com
   password_digest: <%= Person.digest('password') %>
+  
+archer:
+  name: Sterling Archer
+  email: duchess@example.gov
+  password_digest: <%= Person.digest('password') %>
