--- a/test/fixtures/cvstudents.yml
+++ b/test/fixtures/cvstudents.yml
@@ -1,9 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
-  id: 1
+  idnum: 1
 
 two:
-  name: MyString
-  id: 1
+  idnum: 1
