Cleaned up migration files

--- a/test/fixtures/subjects.yml
+++ b/test/fixtures/subjects.yml
@@ -5,11 +5,13 @@ one:
   date: MyString
   rate: MyString
   creatorid: 1
-  deletedSubject: false
+  days: MyText
+  Multiplesubjects: MyText
 
 two:
   name: MyString
   date: MyString
   rate: MyString
   creatorid: 1
-  deletedSubject: false
+  days: MyText
+  Multiplesubjects: MyText
