--- a/test/fixtures/study_groups.yml
+++ b/test/fixtures/study_groups.yml
@@ -1,13 +1,13 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  creatorName: MyString
-  date: MyString
-  location: MyString
-  groupSize: 1
+# one:
+#   creatorName: MyString
+#   date: MyString
+#   location: MyString
+#   groupSize: 1
 
-two:
-  creatorName: MyString
-  date: MyString
-  location: MyString
-  groupSize: 1
+# two:
+#   creatorName: MyString
+#   date: MyString
+#   location: MyString
+#   groupSize: 1
